# gamengine

./: Cargo.toml  README.md
assets/: cards.csv  cleancycle.csv  cross.csv  par.csv  parallax.csv  scales.csv  sin.csv  sin2.csv  sincolor.csv  sincycle.csv  sinwave.csv
lib/graphics/: Cargo.toml
lib/graphics/src/: app.rs  color_shapes.rs  gerror.rs  lib.rs  program.rs  shader.rs  shader_source.rs  shapes.rs  texture.rs  texture_shapes.rs  vertex.rs  window.rs
lib/mandelbrot/: Cargo.toml
lib/mandelbrot/src/: color_calc.rs  eq.rs  fileformat.rs  image_create.rs  lib.rs
lib/plotlib/: Cargo.toml
lib/sceneplotlib/: Cargo.toml
lib/sceneplotlib/src/: lib.rs
lib/siunits/: Cargo.toml
lib/siunits/src/: lib.rs  measurement.rs  units.rs
programs/imgview/: Cargo.toml
programs/imgview/src/: main.rs
programs/mandlebrotviewer/: Cargo.toml
programs/mandlebrotviewer/frames/: big.csv  bigger.csv  default.csv  medium.csv  zoomed.csv
programs/mandlebrotviewer/src/: main.rs
programs/phys/: Cargo.toml
programs/phys/src/: main.rs
programs/plotting/: Cargo.toml
programs/plotting/assets/: par.csv  sin2.csv  sincolor.csv  sincycle.csv  sintricolor.csv
programs/plotting/src/: main.rs
programs/sceneplot/: Cargo.toml
programs/sceneplot/assets/: cards.csv  cleancycle.csv  cross.csv  mountainscene.csv  parallax.csv  scales.csv  sinwave.csv
src/fileformat/: Cargo.toml  lib.rs  rectsource.rs  shapesource.rs
src/graphics/: Cargo.toml  app.rs  lib.rs  shader.rs  vertex.rs  window.rs
src/parallaxclient/: main.rs
src/types/: Cargo.toml  lib.rs
(+6 files in other folders)
