[package]
name = "parallax"
version = "0.1.0"
authors = ["Quinten Palmer <quintenpalmer@gmail.com>"]

[[bin]]
name = "parallaxclient"
path = "src/parallaxclient/main.rs"
test = false
bench = false

[dependencies]
graphics = {path = "src/graphics"}
fileformat = {path = "src/fileformat"}
types = {path = "src/types"}
